Public/CSS/style.css
/* ... */
.inwinkelwagen
{
    border-radius: 7px;
    width: 180px;
    color: white;
    height: 50px;
    font-size: large;
}

.inwinkelwagen2 {
    position: relative;
    margin-top: 70px;
    float: left;
    color: white;
    border-radius: 7px;
    width: 180px;
    height: 50px;
    font-size: large;
}
.smallbutton
{
    top: 5px;
    width:15%;
}

.button20
{
    width: 20%;
}

.button40
{
    width:40%;
}

.accountbutton
{
    position:fixed;
    left:50%;
    top:75%;
    transform: translate(-50%, -50%);
}

.shiftright
{
    position:relative; left:60px; top:2px
}

.moveright
{
    width:30%;
    position:relative; left:60px; top:2px
}

.dropDown2
{
    width:10%;
}

body {
    padding-top: 115px;
    overflow-x:hidden;
    color: #FFF !important;
    background-image: url(../Img/background.jpg);
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
}
@font-face {
    font-family: MmrText;
    src: url(/Public/fonts/mmrtext.ttf);
}
select {
    margin: 50px;
    width: 100%;
    padding: 5px 35px 5px 5px;
    font-size: 16px;
    border: 1px solid #CCC;
    height:50px;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    background: url(../Img/mouse-hover-icon-22.jpg) 96% / 30px no-repeat #EEE;
}

a {
    text-decoration: none;
    position: relative;
    color:#000000;
}
a:hover {
    text-decoration: none !important;
}
a span {
    display: none;
    position: absolute;
    color: #676EFF;
    background: #676EFF;
    padding: 5px;
}
a:hover span {
    display: inline-block; text-align: center;
    width: 250px;
    min-height: 30px;
    margin-top: 25px;
    font-family: pt-sans, sans-serif;
    color: #000;
    font-size: 18px;
    text-transform: uppercase;
    font-weight: bold;
}
input {
    font-family: pt-sans, sans-serif;
    height: 50px;
    font-size: 20px;
    width: 100%;
    padding: 0 10px;
}
table tr th,
table tr td {
    padding: 10px;
}
ul#ul-class-navigation {
    right: 10px;
    line-height: 200px;
    position: absolute;
}
ul#ul-class-navigation li {
    color: white;
    display: inline;
    font-family: pt-sans, sans-serif;
    font-size: 20px;
    text-decoration: none;
    text-decoration-color: currentcolor;
}
#Header {
    position: fixed;
    top:0;
    background-color: rgb(35, 35, 47);
    width: 100%;
    height: 200px;
    z-index: 1;
    border-bottom: 1px solid #3c2b24;
}
#Content {
    margin-top: 200px;
}
#FilterFrame {
    position: fixed;
    width: 19%;
    background-color: #1e2230;
    float: left;
    top:130px;
    border: 2px solid #11141c;
    margin-left: 5px;
    margin-top: 10px;
    padding: 20px;
}
#ResultsArea.Browse {
    width: 78%;
    margin-left: 21%;
    float: left;
    position: sticky;
}

.BrowseChild2 {
    position: sticky;
    float: right;
    width: 400px;
    border-style: solid;
}
#ProductFrame {
    width: 100%;
    height: 250px;
    margin-top: 15px;
    position: relative;
    padding: 1px;
    border-bottom: 1px solid #fff;
}
.ImgFrame {
    width: 230px;
    height: 230px;
    background-color: #1e2230;
    float: left;
    margin-left: 10px;
    margin-top: 10px;
    margin-right: 10px
}
.ImgFrame img {
    width: 230px;
    height: 230px;
}
#StockItemFrameRight {
    float: right;
    text-align: right;
    margin-right: 10px;
    margin-top: 10px;
    position: absolute;
    bottom: 10px;
    right: 0;
    top: 0;
}
.ItemName {
    position: relative;
    top: 10px;
    font-family: pt-sans, sans-serif;
    color: #fff;
    font-size: 18px;
    text-transform: uppercase;
    font-weight: bold;
}
.ItemQuantity {
    position: absolute;
    left: 250px;
    bottom: 2.5px;
    color: white;
    font-size: 15px;
}
#VideoFrame {
    position: absolute;
    top: 500px;
    width: 500px;
    height: 400px;
    background-color: #d6d6d6;
    margin-bottom: 10px;
}
#ArticleHeader {
    width: 100%;
    height: 450px;
    position: relative;
}
#ImageFrame {
    width: 500px;
    height: 400px;
    background-color: #1e2230;
    float: left;
    margin-right: 10px;
}
.QuantityText {
    position: relative;
    text-align: left;
    width: 350px;
    left: 0;
}
#StockItemHeaderLeft {
    float: right;
    text-align: right;
    position: absolute;
    top: 0;
    right: 0;
    height: 300px;
}

.StockItemNameViewSize {
    font-size: 35px !important;
}
.CenterPriceLeft {
    position: absolute;
    height: 450px;
    right: 0;
    width: 500px;
}
.CenterPriceLeftChild {
    position: relative;
    top: 220px;
    height: 450px;
    float: right;
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
}
#StockItemDescription {
    position: relative;
    width: 50%;
    float: left;
    padding-bottom: 10px;
    margin-left: 1%;
    font-family: pt-sans, sans-serif;
    font-size: 20px;
}
#StockItemSpecifications {
    position: relative;
    width: 50%;
    float: left;
    padding-bottom: 10px;
    margin-left: 1%;
    font-family: pt-sans, sans-serif;
    font-size: 20px;
}

.addtocart {
    position: relative;
    height: 50px;
}
.Labels {
    margin-bottom: 0;
    padding: 10px;
    font-size: 20px;
    margin-right: 5px;
}
.Background {
    background-color: #3c2b24;
    width: 100%;
    height: 100%;
    position: absolute;
}
#LogoA {
    height: 200px;
    width: 100%;
    position: absolute;
}
#LogoImage {
    background-image: url("../ProductIMGHighRes/NerdyGadgetsLogo.png");
    width: 250px;
    height: 90px;
    margin: 55px 55px 55px 10%;
}
ul#ul-class li {
    display: inline;
    color: #dce4ee;
    margin-right: 1em;
    font-size: 18px;
    text-decoration: none;
    line-height: 200px;
}
ul#ul-class-price li {
    display: inline;
}
.TextPrice {
    margin-top: 16%;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}
.HrefDecoration {
    color: #ffffff;
}
/* ... */

